# agents-workflow

./: .cspell.json  .gitignore  .gitmodules  .lychee.toml  .markdownlint-cli2.yaml  .prettierignore  .prettierrc.json  .vale.ini  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  clippy.toml  codex-setup  common-post-setup  common-pre-setup  copilot-setup  flake.nix  goose-setup  integration-test.sh  jules-setup  lychee.toml  open-hands-setup  process-compose.yaml  rustfmt.toml
.agents/: codebase-insights.txt  codex-setup
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.obsidian/: graph.json  workspace.json
PoC/dydl-insert-libraries/: .gitignore  README.md  status.md  test-both-libs.sh  test-dual-protocol.sh  test-interception.sh
assets/: agent-harbor-logo-80.ansi
crates/agentfs-core/: Cargo.toml
crates/agentfs-ffi/: Cargo.toml
crates/agentfs-ffi/src/: c_api.rs  lib.rs
crates/agentfs-fskit-bridge/: Cargo.toml  build.rs
crates/agentfs-fskit-bridge/src/: lib.rs
crates/agentfs-fskit-host/: Cargo.toml
crates/agentfs-fskit-host/src/: fskit.rs  lib.rs  main.rs  stub.rs  xpc_control.rs
crates/agentfs-fskit-sys/: Cargo.toml  build.rs
crates/agentfs-fuse-host/: Cargo.toml
crates/agentfs-fuse-host/src/: adapter.rs  main.rs
crates/agentfs-proto/: Cargo.toml
crates/agentfs-proto/src/: lib.rs  messages.rs  validation.rs
crates/agentfs-proto/tests/: validation_tests.rs
crates/agentfs-winfsp-host/: Cargo.toml
crates/agentfs-winfsp-host/src/: main.rs
crates/ah-cli/: Cargo.toml
crates/ah-cli/src/: lib.rs  main.rs  sandbox.rs  task.rs  tui.rs
crates/ah-cli/src/agent/: fs.rs
crates/ah-cli/tests/: cli_tests.rs
crates/ah-client-api/: Cargo.toml
crates/ah-core/: Cargo.toml
crates/ah-core/src/: agent_tasks.rs  db.rs  devshell.rs  editor.rs  error.rs  lib.rs  push.rs  session.rs  task.rs
crates/ah-core/tests/: agent_tasks_tests.rs
crates/ah-fs-snapshots/: Cargo.toml
crates/ah-fs-snapshots-btrfs/: Cargo.toml
crates/ah-fs-snapshots-btrfs/src/: lib.rs
crates/ah-fs-snapshots-daemon/: Cargo.toml
crates/ah-fs-snapshots-daemon/src/: client.rs  lib.rs  main.rs  server.rs  types.rs
crates/ah-fs-snapshots-git/: Cargo.toml
crates/ah-fs-snapshots-git/src/: lib.rs
crates/ah-fs-snapshots-traits/: Cargo.toml
crates/ah-fs-snapshots-traits/src/: lib.rs
crates/ah-fs-snapshots-zfs/: Cargo.toml
crates/ah-fs-snapshots-zfs/src/: lib.rs
crates/ah-fs-snapshots/src/: lib.rs  zfs_stub.rs
crates/ah-fs-snapshots/tests/: integration.rs  lib.rs  provider_core_behavior.rs  provider_quota_behavior.rs  zfs_integration_tests.rs
crates/ah-local-db/: Cargo.toml
crates/ah-local-db/src/: connection.rs  migrations.rs  models.rs  schema.rs
crates/ah-macos-launcher/: Cargo.toml
crates/ah-macos-launcher/src/: main.rs
crates/ah-mux/: Cargo.toml
crates/ah-mux-core/: Cargo.toml
crates/ah-mux/src/: kitty.rs  lib.rs  tmux.rs
crates/ah-mux/src/snapshots/: ah_mux__tmux__snapshot_testing__after_run_command.snap  ah_mux__tmux__snapshot_testing__after_send_text.snap  ah_mux__tmux__snapshot_testing__after_split_horizontal.snap  ah_mux__tmux__snapshot_testing__complex_layout_final.snap  ah_mux__tmux__snapshot_testing__complex_layout_two_panes.snap
crates/ah-repo/: Cargo.toml
crates/ah-repo/src/: lib.rs  repo.rs  test_helpers.rs
crates/ah-repo/tests/: vcs_repo_tests.rs
crates/ah-rest-api-contract/: Cargo.toml
crates/ah-rest-api-contract/src/: lib.rs  types.rs  validation.rs
crates/ah-rest-client/: Cargo.toml
crates/ah-rest-client-mock/: Cargo.toml
crates/ah-rest-client-mock/src/: lib.rs
crates/ah-rest-client/src/: client.rs  error.rs  lib.rs  sse.rs
crates/ah-sandbox/: Cargo.toml
crates/ah-sandbox-linux/: Cargo.toml
crates/ah-sandbox-linux/src/: lib.rs
crates/ah-sandbox-macos/: Cargo.toml
crates/ah-test-scenarios/: Cargo.toml
crates/ah-tui/: Cargo.toml
crates/ah-tui-multiplexer/: Cargo.toml
crates/ah-tui-multiplexer/src/: lib.rs
crates/ah-tui-test/: Cargo.toml
crates/ah-tui-test/src/: main.rs
crates/ah-tui/src/: app.rs  error.rs  golden.rs  lib.rs  main.rs  model.rs  msg.rs  task.rs  test_runtime.rs  ui.rs  viewmodel.rs
crates/ah-tui/tests/: layout.rs  scenario_render.rs
crates/ah-tui/tests/__goldens__/basic_navigation/: after_tab_to_repositories.golden  after_up_arrow.golden
crates/ah-tui/tests/snapshots/: scenario_render__initial_screen.snap
crates/aw-cli/: Cargo.toml
crates/aw-cli/src/: lib.rs  main.rs  sandbox.rs  task.rs  transport.rs  tui.rs
crates/aw-cli/src/agent/: fs.rs
crates/aw-cli/tests/: cli_tests.rs
crates/aw-core/: Cargo.toml
crates/aw-core/src/: agent_tasks.rs  db.rs  devshell.rs  error.rs  lib.rs  push.rs  session.rs  task.rs
crates/aw-core/tests/: agent_tasks_tests.rs
crates/aw-fs-snapshots-btrfs/: Cargo.toml
crates/aw-fs-snapshots-btrfs/src/: lib.rs
docs/: AI-Development-Guide.md  Product-One-Pager.md
install/: install-nix
lib/: agent_tasks.rb  extras_installer.rb  vcs_repo.rb
repomix/: .gitignore
scripts/: check-ah-fs-snapshots-daemon.sh  check-aw-fs-snapshots-daemon.rb  check-aw-fs-snapshots-daemon.sh  check-test-filesystems.sh  cleanup-test-filesystems.sh  conf-schema-validate.sh  create-local-sosumi-mirror.sh  create-test-filesystems.sh  demo-sandbox.sh  e2e-fskit.sh  install-agent-hardbor-app.sh  install-agentsworkflow-app.sh  lint-specs.sh  nix-env.sh  register-fskit-extension.sh  run_snapshot_tests.rb  start-ah-fs-snapshots-daemon.sh  start-aw-fs-snapshots-daemon.sh  systemextensions-devmode-and-status.sh  test-filesystems-config.sh  verify-macos-fskit-prereqs.sh  webui-manual-test.sh  webui-manual.sh
setup-tests/: Dockerfile  README.md  container-test.sh  test-runner.sh
specs/: AGENTS.md
test/: AGENTS.md  mock_agent_test_config.json  run_tests_shell.rb  test_get_task.rb  test_helper.rb  test_mock_agent_docker.rb  test_mock_agent_integration.rb  test_mock_agent_performance.rb  test_start_task.rb  test_workflows.rb
test_scenarios/: basic_navigation.json
webui/: AGENTS.md  knip.json  package-lock.json  package.json
(+651 files in other folders)
