[workspace]
members = [
  "crates/aw-core",
  "crates/aw-local-db",
  "crates/aw-repo",
  "crates/aw-fs-snapshots",
  "crates/aw-fs-snapshots-traits",
  "crates/aw-fs-snapshots-zfs",
  "crates/aw-fs-snapshots-btrfs",
  "crates/agentfs-fskit-sys",
  "crates/agentfs-fskit-bridge",
  "crates/aw-sandbox",
  "crates/aw-sandbox-linux",
  "crates/aw-fs-snapshots-daemon",
  # Sandbox crates
  "crates/sandbox-core",
  "crates/sandbox-fs",
  "crates/sandbox-seccomp",
  "crates/sandbox-cgroups",
  "crates/sandbox-net",
  "crates/sandbox-devices",
  "crates/sandbox-proto",
  "crates/sbx-helper",
  # AgentFS crates
  "crates/agentfs-core",
  "crates/agentfs-proto",
  "crates/agentfs-fuse-host",
  "crates/agentfs-winfsp-host",
  "crates/agentfs-fskit-host",
  "crates/agentfs-ffi",
  # CLI
  "crates/aw-cli",
  # Integration tests
  "tests/sandbox-integration",
  "tests/cgroup-enforcement",
  "tests/overlay-enforcement",
  "tests/network-enforcement",
  "tests/debugging-enforcement",
  "tests/container-enforcement",
  "tests/vm-enforcement",
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# System interfaces
nix = "0.28"

# Async traits
async-trait = "0.1"

# Testing
tempfile = "3.0"

# HTTP client for connectivity checks
ureq = { version = "2.0", features = ["json"] }

# VCS repository abstraction
chrono = { version = "0.4", features = ["serde"] }

# SSZ serialization for daemon
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
