[package]
name = "agentfs-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
agentfs-core = { path = "../agentfs-core" }
agentfs-proto = { path = "../agentfs-proto" }
anyhow = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
lazy_static = "1.4"
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
