[package]
name = "agentfs-fskit-bridge"
version = "0.1.0"
edition = "2021"
description = "Swift-callable bridge for AgentFS FSKit adapter"
license = "MIT OR Apache-2.0"

[lib]
name = "agentfs_fskit_bridge"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
thiserror = "1.0"
serde_json = "1.0"
hex = "0.4"

[dependencies.agentfs-core]
path = "../agentfs-core"

[dependencies.agentfs-ffi]
path = "../agentfs-ffi"

[dependencies.agentfs-fskit-sys]
path = "../agentfs-fskit-sys"

[build-dependencies]
cc = "1.0"

[features]
# Feature to enable linking against the sys crate (disabled by default for testing)
link-sys = []
