[package]
name = "agentfs-fskit-host"
version = "0.1.0"
edition = "2021"

[dependencies]
# AgentFS crates
agentfs-core = { path = "../agentfs-core" }
agentfs-ffi = { path = "../agentfs-ffi" }
agentfs-proto = { path = "../agentfs-proto" }

# External dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] } # For async XPC operations
libc = "0.2"

# macOS-specific dependencies (conditional compilation)
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
block = "0.1"
dispatch = "0.2" # For Grand Central Dispatch

[features]
default = []
# Feature flags for different build configurations
xpc = [] # Enable XPC control plane
