[package]
name = "agentfs-fskit-host"
version = "0.1.0"
edition = "2021"

[dependencies]
# AgentFS crates
agentfs-core = { path = "../agentfs-core" }
agentfs-ffi = { path = "../agentfs-ffi" }
agentfs-proto = { path = "../agentfs-proto" }

# External dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }   # For async XPC operations
libc = "0.2"
# SSZ serialization (matching agentfs-proto)
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"

# macOS-specific dependencies (conditional compilation)
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
block = "0.1"
dispatch = "0.2"        # For Grand Central Dispatch

[features]
default = []
# Feature flags for different build configurations
xpc = [] # Enable XPC control plane
