[package]
name = "agentfs-fuse-host"
version = "0.1.0"
edition = "2021"

[dependencies]
agentfs-core = { path = "../agentfs-core" }
agentfs-proto = { path = "../agentfs-proto" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }

# FUSE dependencies (Linux/macOS) - optional for cross-platform builds
fuser = { version = "0.16", optional = true }
serde_json = { workspace = true }
libc = "0.2"

[features]
default = []
fuse = ["fuser"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1.0", features = ["rt", "macros"] }
