[package]
name = "agentfs-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
lazy_static = "1.4"
# SSZ serialization (matching ah-fs-snapshots-daemon)
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"
agentfs-core = { path = "../agentfs-core" }

[dev-dependencies]
tempfile = { workspace = true }
