[package]
name = "ah-cli"
version = "0.1.0"
edition = "2021"
description = "Agents Workflow CLI - Main command-line interface"
license = "MIT OR Apache-2.0"

[features]
default = ["zfs", "btrfs"]
zfs = []
btrfs = []

[[bin]]
name = "ah"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# AH core dependencies
ah-core = { path = "../ah-core" }
ah-repo = { path = "../ah-repo" }
ah-local-db = { path = "../ah-local-db" }
ah-fs-snapshots = { path = "../ah-fs-snapshots", features = [
  "zfs",
  "btrfs",
  "git",
] }
ah-fs-snapshots-zfs = { path = "../ah-fs-snapshots-zfs" }
ah-fs-snapshots-btrfs = { path = "../ah-fs-snapshots-btrfs" }
ah-fs-snapshots-git = { path = "../ah-fs-snapshots-git" }
chrono = { workspace = true, features = ["serde"] }
sandbox-core = { path = "../sandbox-core", features = [
  "cgroups",
  "seccomp",
  "net",
  "devices",
] }
sandbox-seccomp = { path = "../sandbox-seccomp" }

# REST API client for TUI
ah-rest-client = { path = "../ah-rest-client" }

# AgentFS dependencies
agentfs-proto = { path = "../agentfs-proto" }
# SSZ serialization (matching agentfs-proto)
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "ioctl"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "handleapi",
  "fileapi",
  "winioctl",
  "errhandlingapi",
] }

[dev-dependencies]
tempfile = { workspace = true }
