[package]
name = "ah-local-db"
version = "0.1.0"
edition = "2021"
description = "SQLite database management for local Agents Workflow state"
license = "MIT OR Apache-2.0"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
