[package]
name = "ah-mux"
version = "0.1.0"
edition = "2021"
description = "High-level AH adapter for terminal multiplexers with tmux, kitty, and other backends"
license = "MIT OR Apache-2.0"

[dependencies]
ah-mux-core = { path = "../ah-mux-core" }
thiserror = "1.0"
tokio = { workspace = true, features = ["process", "io-util"] }
regex = "1.0"
serde = { workspace = true, features = ["derive"] }
async-trait = "0.1"

[features]
default = ["tmux"]
tmux = []
kitty = []
wezterm = []
zellij = []
screen = []

[dev-dependencies]
tokio-test = "0.4"
expectrl = "0.3"
vt100 = "0.15"
insta = { version = "1.40", features = ["json"] }
anyhow = "1.0"
