[package]
name = "ah-rest-client"
version = "0.1.0"
edition = "2021"
description = "REST API client for agent-harbor service"
license = "MIT OR Apache-2.0"

[dependencies]
ah-rest-api-contract = { path = "../ah-rest-api-contract" }
ah-client-api = { path = "../ah-client-api" }
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
  "rustls-tls-native-roots",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
url = "2.5"
base64 = "0.22"
eventsource-client = "0.13"

[dev-dependencies]
tokio-test = "0.4"
