[package]
name = "ah-sandbox"
version = "0.1.0"
edition = "2021"
description = "Sandbox isolation abstractions for Agents Workflow"
license = "MIT OR Apache-2.0"

[dependencies]
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait = "0.1"

[features]
default = []
linux = []

[dependencies.ah-core]
path = "../ah-core"
