[package]
name = "ah-tui-test"
version = "0.1.0"
edition = "2021"

[dependencies]
ah-tui = { path = "../ah-tui" }
ah-test-scenarios = { path = "../ah-test-scenarios" }
ah-rest-client-mock = { path = "../ah-rest-client-mock" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[[bin]]
name = "tui-test"
path = "src/main.rs"
