[package]
name = "aw-cli"
version = "0.1.0"
edition = "2021"
description = "Agents Workflow CLI - Main command-line interface"
license = "MIT OR Apache-2.0"

[features]
default = ["zfs", "btrfs"]
zfs = []
btrfs = []

[[bin]]
name = "aw"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# AW core dependencies
aw-core = { path = "../aw-core" }
aw-repo = { path = "../aw-repo" }
aw-local-db = { path = "../aw-local-db" }
aw-fs-snapshots = { path = "../aw-fs-snapshots", features = [
  "zfs",
  "btrfs",
  "git",
] }
aw-fs-snapshots-zfs = { path = "../aw-fs-snapshots-zfs" }
aw-fs-snapshots-btrfs = { path = "../aw-fs-snapshots-btrfs" }
aw-fs-snapshots-git = { path = "../aw-fs-snapshots-git" }
chrono = { version = "0.4", features = ["serde"] }
sandbox-core = { path = "../sandbox-core", features = [
  "cgroups",
  "seccomp",
  "net",
  "devices",
] }
sandbox-seccomp = { path = "../sandbox-seccomp" }

# REST API client for TUI
aw-rest-client = { path = "../aw-rest-client" }

# AgentFS dependencies
agentfs-proto = { path = "../agentfs-proto" }
# SSZ serialization (matching agentfs-proto)
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["fs", "ioctl"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "handleapi",
  "fileapi",
  "winioctl",
  "errhandlingapi",
] }

[dev-dependencies]
tempfile = { workspace = true }
