[package]
name = "aw-core"
version = "0.1.0"
edition = "2021"
description = "Core task and session lifecycle orchestration for Agents Workflow"
license = "MIT OR Apache-2.0"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
