[package]
name = "aw-fs-snapshots-btrfs"
version = "0.1.0"
edition = "2021"
description = "Btrfs snapshot provider implementation for Agents Workflow"
license = "MIT OR Apache-2.0"

[dependencies]
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dependencies.aw-fs-snapshots]
path = "../aw-fs-snapshots"
